# resume_extractor

./: .gitignore  main.py  pyproject.toml  readme.md
backend/: main.py  pyproject.toml
backend/api/: resume.py
backend/core/: bg_task.py  inference.py  prompt.py  resume_llm_schema.py  utils.py
backend/notebooks/: adk1.ipynb  observ.ipynb
core/: docs_extractor.py  llm_extractor.py
docs/: HLD_v1.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/resume/: page.tsx
frontend/app/resume/[task_id]/: page.tsx
frontend/blocks/: hero-2.tsx
frontend/components/: resume-display.tsx  resume_upload.tsx
frontend/lib/: types.ts
