[project]
name = "resume-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "ipykernel>=6.29.5",
    "langchain-groq>=0.3.4",
    "langchain>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-docling>=1.0.0",
    "langchain-huggingface>=0.3.0",
    "langchain-milvus>=0.2.0",
    "python-dotenv>=1.1.1",
]
